files/页面_1/styles.css
/* ... */
#u2 {
  border-width:0px;
  position:absolute;
  left:0px;
  top:0px;
  width:1475px;
  height:58px;
  display:flex;
  transition:none;
  transform-origin:50% 50%;
}
#u2 .text {
  position:absolute;
  align-self:center;
  padding:0px 0px 0px 0px;
  box-sizing:border-box;
  width:100%;
}
#u2_text {
  border-width:0px;
  word-wrap:break-word;
  text-transform:none;
  visibility:hidden;
}
#u3 {
  border-width:0px;
  position:absolute;
  left:0px;
  top:58px;
  width:1475px;
  height:2187px;
}
#u3_state0 {
  border-width:0px;
  position:absolute;
  left:0px;
  top:0px;
  width:1475px;
  height:2187px;
  -ms-overflow-x:hidden;
  overflow-x:hidden;
  -ms-overflow-y:hidden;
  overflow-y:hidden;
  background-image:none;
  border-radius:0px;
  -moz-box-shadow:none;
  -webkit-box-shadow:none;
  box-shadow:none;
}
#u3_state0_content {
  border-width:0px;
  position:absolute;
  left:0px;
  top:0px;
  width:1px;
  height:1px;
}
#u4 {
  border-width:0px;
  position:absolute;
  left:0px;
  top:0px;
  width:1475px;
  height:425px;
}
#u4_state0 {
  border-width:0px;
  position:absolute;
  left:0px;
  top:0px;
  width:1475px;
  height:425px;
  -ms-overflow-x:hidden;
  overflow-x:hidden;
  -ms-overflow-y:hidden;
  overflow-y:hidden;
  background-color:rgba(240, 244, 255, 1);
  background-image:none;
  border-radius:0px;
  -moz-box-shadow:none;
  -webkit-box-shadow:none;
  box-shadow:none;
}
#u4_state0_content {
  border-width:0px;
  position:absolute;
  left:0px;
  top:0px;
  width:1px;
  height:1px;
}
#u5 {
  border-width:0px;
  position:absolute;
  left:0px;
  top:0px;
  width:1475px;
  height:425px;
}
#u5_state0 {
  border-width:0px;
  position:absolute;
  left:0px;
  top:0px;
  width:1475px;
  height:425px;
  -ms-overflow-x:hidden;
  overflow-x:hidden;
  -ms-overflow-y:hidden;
  overflow-y:hidden;
  background-color:#f3f4f6;
  background-image:none;
  border-radius:0px;
  -moz-box-shadow:none;
  -webkit-box-shadow:none;
  box-shadow:none;
}
#u5_state0_content {
  border-width:0px;
  position:absolute;
  left:0px;
  top:0px;
  width:100%;
  height:100%;
}
#u6 {
  border-width:0px;
  position:absolute;
  left:0px;
  top:425px;
  width:1475px;
  height:710px;
}
#u6_state0 {
  border-width:0px;
  position:absolute;
  left:0px;
  top:0px;
  width:1475px;
  height:710px;
  -ms-overflow-x:hidden;
  overflow-x:hidden;
  -ms-overflow-y:hidden;
  overflow-y:hidden;
  background-color:rgba(255, 255, 255, 1);
  background-image:none;
  border-radius:0px;
  -moz-box-shadow:none;
  -webkit-box-shadow:none;
  box-shadow:none;
}
#u6_state0_content {
  border-width:0px;
  position:absolute;
  left:0px;
  top:0px;
  width:1px;
  height:1px;
}
#u7 {
  border-width:0px;
  position:absolute;
  left:138px;
  top:80px;
  width:1200px;
  height:550px;
}
#u7_state0 {
  border-width:0px;
  position:absolute;
  left:0px;
  top:0px;
  width:1200px;
  height:550px;
  -ms-overflow-x:hidden;
  overflow-x:hidden;
  -ms-overflow-y:hidden;
  overflow-y:hidden;
  background-image:none;
  border-radius:0px;
  -moz-box-shadow:none;
  -webkit-box-shadow:none;
  box-shadow:none;
}
#u7_state0_content {
  border-width:0px;
  position:absolute;
  left:0px;
  top:0px;
  width:1px;
  height:1px;
}
#u8 {
  border-width:0px;
  position:absolute;
  left:24px;
  top:0px;
  width:1152px;
  height:89px;
}
#u8_state0 {
  border-width:0px;
  position:absolute;
  left:0px;
  top:0px;
  width:1152px;
  height:89px;
  -ms-overflow-x:hidden;
  overflow-x:hidden;
  -ms-overflow-y:hidden;
  overflow-y:hidden;
  background-image:none;
  border-radius:0px;
  -moz-box-shadow:none;
  -webkit-box-shadow:none;
  box-shadow:none;
}
#u8_state0_content {
  border-width:0px;
  position:absolute;
  left:0px;
  top:0px;
  width:1px;
  height:1px;
}
#u9 {
  border-width:0px;
  position:absolute;
  left:-1px;
  top:0px;
  width:1152px;
  height:51px;
}
#u9_state0 {
  border-width:0px;
  position:absolute;
  left:0px;
  top:0px;
  width:1152px;
  height:51px;
  -ms-overflow-x:hidden;
  overflow-x:hidden;
  -ms-overflow-y:hidden;
  overflow-y:hidden;
  background-image:none;
  border-radius:0px;
  -moz-box-shadow:none;
  -webkit-box-shadow:none;
  box-shadow:none;
}
#u9_state0_content {
  border-width:0px;
  position:absolute;
  left:0px;
  top:0px;
  width:1px;
  height:1px;
}
#u10_div {
  border-width:0px;
  position:absolute;
  left:0px;
  top:0px;
  width:195px;
  height:52px;
  background:inherit;
  background-color:rgba(255, 255, 255, 0);
  border-radius:0px;
  filter:drop-shadow(none);
  transition:none;
  font-family:"Inter-Regular", "Inter", sans-serif;
  font-weight:400;
  font-style:normal;
  font-size:32px;
  color:#1F2937;
  line-height:51px;
}
#u10 {
  border-width:0px;
  position:absolute;
  left:479px;
  top:1px;
  width:195px;
  height:52px;
  display:flex;
  transition:none;
  transform-origin:50% 50%;
  font-family:"Inter-Regular", "Inter", sans-serif;
  font-weight:400;
  font-style:normal;
  font-size:32px;
  color:#1F2937;
  line-height:51px;
}
#u10 .text {
  position:absolute;
  align-self:flex-start;
  padding:0px 0px 0px 0px;
  box-sizing:border-box;
  width:100%;
}
#u10_text {
  border-width:0px;
  word-wrap:break-word;
  text-transform:none;
}
#u11 {
  border-width:0px;
  position:absolute;
  left:-1px;
  top:63px;
  width:1152px;
  height:26px;
}
#u11_state0 {
  border-width:0px;
  position:absolute;
  left:0px;
  top:0px;
  width:1152px;
  height:26px;
  -ms-overflow-x:hidden;
  overflow-x:hidden;
  -ms-overflow-y:hidden;
  overflow-y:hidden;
  background-image:none;
  border-radius:0px;
  -moz-box-shadow:none;
  -webkit-box-shadow:none;
  box-shadow:none;
}
#u11_state0_content {
  border-width:0px;
  position:absolute;
  left:0px;
  top:0px;
  width:1px;
  height:1px;
}
/* ... */

